cluster/apps/default/vpn/ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: openvpn
  namespace: default
spec:
  ports:
    - port: 1194
      targetPort: 1194
      protocol: TCP
  type: LoadBalancer
  externalTrafficPolicy: Local
---
kind: Endpoints
apiVersion: v1
metadata:
  name: openvpn
  namespace: default
subsets:
  - addresses:
      - ip: 192.168.1.60
    ports:
      - port: 1194
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openvpn
  namespace: default
spec:
  rules:
    - host: vpn.${SECRET_DOMAIN}
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: openvpn
                port:
                  number: 1194
